k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: online-shop-svc
  namespace: online-shop

spec:
  selector:
    app: online-shop-app

  ports:
  - protocol: TCP
    port: 80 # Service/cluster
    targetPort: 80 # pod/container
